--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     </header>
     <main>
         <button id="start-btn">Comenzar</button>
-    </main>
+    </div>
+
+    <div id="selection-screen" style="display:none;">
+        <h2>Selecciona el número de participantes</h2>
+        <button id="ten-participants">10 Participantes</button>
+        <button id="sixteen-participants">16 Participantes</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
