--- a/index.html
+++ b/index.html
@@ -3,14 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador de Supervivencia K-pop</title>
+    <title>Simulador de Show K-pop</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Bienvenido al Simulador de Supervivencia K-pop</h1>
-    </header>
-    <main>
+    <div id="start-screen">
         <button id="start-btn">Comenzar</button>
     </div>
 
