--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="start-screen">
+        <h1>Simulador de Show K-pop</h1> <!-- Título -->
         <button id="start-btn">Comenzar</button>
     </div>
 
