--- a/index.html
+++ b/index.html
@@ -21,3 +21,8 @@
     <script src="script.js"></script>
 </body>
 </html>
+<div id="setup-screen" style="display:none;">
+    <h2>Configura los Participantes</h2>
+    <div id="participants-config"></div>
+    <button id="start-simulation">Iniciar Simulación</button>
+</div>
